# hexbytes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yaml  publish.yaml  test.yaml
docs/: conf.py  contributing.rst  index.rst  release_notes.rst
hexbytes/: _utils.py  main.py
newsfragments/: 56.breaking.rst  README.md
tests/core/: test_hexbytes.py
