[build-system]
requires = ["setuptools>=75", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "hexbytes"
dynamic = ["version"]
description = "hexbytes: Python `bytes` subclass that decodes hex, with a readable console output"
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
authors = [
    { name = "The Ethereum Foundation", email = "snakecharmers@ethereum.org" },
    { name = "ApeWorX Collective", email = "admin@apeworx.io" },
]
maintainers = [
    { name = "ApeWorX Collective", email = "admin@apeworx.io" },
]
keywords = ["ethereum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ApeWorX/hexbytes"
Repository = "https://github.com/ApeWorX/hexbytes.git"
Issues = "https://github.com/ApeWorX/hexbytes/issues"
Documentation = "https://hexbytes.readthedocs.io/"

[dependency-groups]
test = [
    "eth_utils>=2.0.0",
    "hypothesis>=3.44.24",
    "pytest>=7.0.0",
    "pytest-xdist>=2.4.0",
]
lint = [
    "ruff>=0.12.0",
    "mypy==1.18.2",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=0.4.1",
    "mdformat-pyproject>=0.0.2",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-autobuild>=2021.3.14",
    "sphinx_rtd_theme>=1.0.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    "ipython",
    "prek",
]

[tool.setuptools.packages.find]
exclude = ["scripts", "scripts.*", "tests", "tests.*"]

[tool.setuptools.package-data]
hexbytes = ["py.typed"]

[tool.setuptools_scm]
fallback_version = "2.0.0b1"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
    "build/",
    "dist/",
    "docs/",
    "venv/",
    ".venv/",
]
ignore_missing_imports = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-v --showlocals --durations 10"
log_date_format = "%m-%d %H:%M:%S"
log_format = "%(levelname)8s  %(asctime)s  %(filename)20s  %(message)s"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".project-template",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "docs",
    "venv*",
]

[tool.ruff.lint]
select = [
    "B",
    "D2",
    "D3",
    "D4",
    "E",
    "F",
    "I",
    "UP",
    "W",
]
ignore = [
    "D200",
    "D203",
    "D204",
    "D205",
    "D212",
    "D400",
    "D401",
    "D412",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["hexbytes"]
known-third-party = ["hypothesis", "pytest"]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"
docstring-code-format = true

[tool.mdformat]
number = true
